--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -1,9 +1,15 @@
-<div class="container">
+<div class="container overall signup">
+
+
+  The UpTrade is currently in beta. To become a member and access additional functionaly of the website, please apply for a beta membership here, or request an invite from an exisitng user. 
+  </div>
+
+<div class="container overall">
     <h4>Login</h4>
 
   <%= form_tag login_url do %>
 
-  <form role="form">
+ 
     <div class="form-group">
       <label for="inputEmail" class="col-xs-1 control-label" <%= label_tag :email, "E-mail or Username:" %> </label>
       <input type="text" class="form-control" id=<%= text_field_tag :email%>
