--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,28 +1,34 @@
 <a name="c_<%= comment.short_id %>"></a>
 <div id="comment_<%= comment.short_id %>" data-shortid="<%= comment.short_id %>"
-class="comment <%= comment.current_vote ? (comment.current_vote[:vote] == 1 ?
+class="border container overall comment <%= comment.current_vote ? (comment.current_vote[:vote] == 1 ?
 "upvoted" : "downvoted") : "" %>
   <%= comment.highlighted ? "highlighted" : "" %>
   <%= comment.score <= 0 ? "negative" : "" %>
   <%= comment.score <= -1 ? "negative_1" : "" %>
   <%= comment.score <= -3 ? "negative_3" : "" %>
   <%= comment.score <= -5 ? "negative_5" : "" %>">
-  <% if !comment.is_gone? %>
-    <div class="voters">
+  <row>
+
+        <div class="voters col-xs-1">
       <% if @user %>
-        <a class="upvoter"></a>
+        <!---<a class="upvoter btn uvote"></a>-->
+        <a class="upvoter btn btn-default up"><div class="arrow-up"></div></a>
+        <div class="score text-center"><%= comment.score %></div>
+        <a class="downvoter btn btn-default down"><div class="arrow-down"></div></a>
       <% else %>
-        <%= link_to "", login_url, :class => "upvoter" %>
-      <% end %>
-      <div class="score"><%= comment.score %></div>
-      <% if @user && @user.can_downvote?(comment) %>
-        <a class="downvoter"></a>
-      <% else %>
-        <span class="downvoter downvoter_stub"></span>
+
+        <a class= "btn btn-default up" href="/login"><div class="arrow-up"></div></a>
+
+
+        <div class="score text-center"><%= comment.score %></div>
+        <a class= "btn btn-default down" href="/login"><div class="arrow-down"></div></a>
       <% end %>
     </div>
-  <% end %>
-  <div class="details">
+
+
+
+
+  <div class="col-md-6 col-lg-10   col-xs-10">
     <div class="byline">
       <% if defined?(was_merged) && was_merged %>
         <span class="merge"></span>
@@ -99,4 +105,5 @@ class="comment <%= comment.current_vote ? (comment.current_vote[:vote] == 1 ?
       <% end %>
     </div>
   </div>
+</row>
 </div>
