--- a/app/views/comments/_commentbox.html.erb
+++ b/app/views/comments/_commentbox.html.erb
@@ -12,14 +12,14 @@
       comment.parent_comment.short_id %>
   <% end %>
 
-  <div style="width: 100%;">
+  <div class="container overall"><strong>Post a Comment</strong>
     <%= text_area_tag "comment", comment.comment, :rows => 5,
       :style => "width: 100%;", :autocomplete => "off", :disabled => !@user,
       :placeholder => (@user ? "" : "You must be logged in to leave a comment.")
       %>
 
     <p></p>
-
+<!--
     <div class="markdown_help_toggler">
       <% if @user %>
         <div class="markdown_help_label">
@@ -30,7 +30,7 @@
           [M&darr;]
         </div>
       <% end %>
-
+-->
       <%= button_tag "#{comment.new_record?? "Post" : "Update"}",
         :class => "comment-post", :type => "button",
         :disabled => !@user %>
