--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,11 +9,11 @@
   <%= render :partial => "stories/listdetail", :collection => @stories,
     :as => :story %>
 </ol>
-
-<div class="morelink">
+<div class="container">
+<div class="morelink btn btn-default page">
   <% if @page && @page > 1 %>
     <a href="<%= @cur_url %><%= @cur_url == "/" ? "" : "/" %><%=
-      @page == 2 ? "" : "page/#{@page - 1}" %>">&lt;&lt; Page
+      @page == 2 ? "" : "page/#{@page - 1}" %>" style="color: black">&lt;&lt; Page
       <%= @page - 1 %></a>
   <% end %>
 
@@ -22,6 +22,7 @@
       |
     <% end %>
     <a href="<%= @cur_url %><%= @cur_url == "/" ? "" : "/" %>page/<%=
-      @page + 1 %>">Page <%= @page + 1 %> &gt;&gt;</a>
+      @page + 1 %>" style="color: black" >Page <%= @page + 1 %> &gt;&gt;</a>
   <% end %>
+</div>
 </div>
