--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -9,7 +9,7 @@
         :f => f } %>
   </div>
 <%= submit_tag "Submit", :class => "btn btn-default" %>
-  
+  </div>
 
 <!--
       <div class="box">
