--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -5,7 +5,7 @@
 
 <div class="story_content">
   <% if @story.markeddown_description.present? %>
-    <div class="story_text">
+    <div class="container overall">
       <%= raw @story.markeddown_description %>
     </div>
   <% end %>
