--- a/app/views/filters/index.html.erb
+++ b/app/views/filters/index.html.erb
@@ -1,13 +1,11 @@
-<div class="box wide">
-  <div class="legend">
-    Filtered Tags
-  </div>
-
+<div class="container">
+  <h4>
+    <strong>Filtered Tags</strong>
+  </h4>
+<br>
   <p>
-  To hide stories from the home page that have been tagged with certain tags,
-  check them below.
+  To hide stories on your frontpage, check them below. All stories on the frontpage are showing by default. 
   </p>
-
   <% if !@user %>
     <p>
     Since you are not logged in, your filters will be stored in a long-lasting
@@ -17,18 +15,21 @@
   <% end %>
 
   <%= form_tag "/filters", :method => :post do %>
-    <table class="data zebra" cellspacing=0 width="75%">
+    <table class="table table-striped table-hover">
+      <thead>
     <tr>
       <th width="7%">Hide</th>
       <th width="13%">Tag</th>
       <th width="65%">Description</th>
       <th width="5%" style="text-align: right; padding-right: 1em;">Stories</th>
     </tr>
+    
+
     <% @tags.each do |tag| %>
       <tr>
         <td><%= check_box_tag "tags[]", tag.tag,
           @filtered_tags.include?(tag) %></td>
-        <td><%= link_to tag.tag, tag_path(tag), :class => tag.css_class %></td>
+        <td><%= link_to tag.tag, tag_path(tag), :class => "btn tagbutton" %></td>
         <td><%= tag.description %>
           <% if tag.hotness_mod != 0 %>
             &nbsp;
@@ -41,7 +42,7 @@
     <% end %>
     </table>
     <p>
-    <%= submit_tag "Save Filters" %>
+    <%= submit_tag "Save Filters", :class => "btn btn-default"%>
     </p>
   <% end %>
 </div>
