--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container overall signup">
 
 
-  The UpTrade is currently in beta. To become a member and access additional functionaly of the website, please apply for a beta membership here, or request an invite from an exisitng user. 
+  The UpTrade is currently in beta. To become a member and access additional functionaly of the website, please signup for a beta membership here, or request an invite from an exisitng user. 
   </div>
 
 <div class="container overall">
