--- a/app/views/users/_invitationform.html.erb
+++ b/app/views/users/_invitationform.html.erb
@@ -1,28 +1,34 @@
-<p>
+<div class="form-group">
+  <div class="col-sm-9">
 Invitations are unlimited, but persons you invite will be associated with your
 account in the <a href="/u">user tree</a> and you may be responsible for them
 if they cause problems.  Please use your discretion when inviting persons you
 don't personally know.
-</p>
+  </div>
+</div>
 
 <%= form_tag "/invitations", :method => :post do |f| %>
   <% if defined?(return_home) && return_home %>
     <%= hidden_field_tag :return_home, 1 %>
   <% end %>
 
-  <div class="boxline">
+<div class="form-group">
+  <div class="col-sm-2">
     <%= label_tag :email, "E-mail Address:", :class => "required" %>
-    <%= text_field_tag :email, "", :size => 30, :autocomplete => "off" %>
   </div>
+  <div class="col-sm-7">
+    <%= text_field_tag :email, "", :size => 30, :autocomplete => "off", :class => "form-control" %>
+  </div>
+</div>
 
-  <div class="boxline">
+<div class="form-group">
+  <div class="col-sm-2">
     <%= label_tag :memo, "Memo to User:", :class => "required" %>
-    <%= text_field_tag :memo, "", :size => 60 %>
   </div>
-
-  <div class="boxline">
-    <p></p>
-    <%= submit_tag "Send Invitation" %>
+  <div class="col-sm-7">
+    <%= text_field_tag :memo, "", :size => 60, :class => "form-control" %>
   </div>
+</div> 
+    <%= submit_tag "Send Invitation", :class => "btn btn-default" %>
 <% end %>
 
