--- a/app/assets/stylesheets/listdetail.css
+++ b/app/assets/stylesheets/listdetail.css
@@ -71,8 +71,8 @@ body{
 .tagbutton {
   font-size: 12px;
   line-height: 0;
-  padding-top: 6px;
-  padding-bottom: 6px;
+  padding-top: 8px;
+  padding-bottom: 8px;
   padding-right: 6px;
   padding-left: 6px;
   margin-right: 2px;
@@ -244,6 +244,39 @@ body {
   font-size: 16px;
 }
 
+.comment {
+  margin-top: 10px;
+}
+
+ol.comments,
+ol.search_results {
+  padding: 0;
+  list-style: none;
+  margin: 0;
+}
+
+ol.comments {
+  margin-left: 50px;
+  margin-bottom: 0em;
+  padding-left: 6px;
+  line-height: 1.35em;
+}
+
+ol.comments.border{
+  margin-top: 20px;
+}
+ol.comments1 {
+  margin-left: 0;
+  padding-left: 25px;
+}
+ol.comments.comments1 {
+  border-left-color: transparent;
+}
+
+ol.comments.collapsed ol,
+ol.comments.collapsed li {
+  display: none;
+}
 
 
 }
