--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -7,21 +7,21 @@
   });
 </script>
 
-<div class="box wide">
-  <div class="legend" style="float: right;">
-    <% if @direction == :out %>
-      <a href="/messages">View Received</a>
-    <% else %>
-      <a href="/messages/sent">View Sent</a>
-    <% end %>
-  </div>
-  <div class="legend">
-    Private Messages
+<div class="container">
+  <div class="col-md-9 border">
+    <h3>Messages
+
     <% if @direction == :out %>
       Sent
     <% end %>
+    <% if @direction == :out %>
+      <a href="/messages" class="btn btn-default pull-right">View Received</a>
+    <% else %>
+      <a href="/messages/sent" class="btn btn-default pull-right">View Sent</a>
+    <% end %>
+  </h3>
   </div>
-
+<br>
   <% if @messages.any? %>
     <%= form_tag batch_delete_messages_url do %>
       <table class="data zebra" width="100%" cellspacing=0>
@@ -48,47 +48,56 @@
         </tr>
       <% end %>
       </table>
-      <p>
-      <%= submit_tag "Delete Selected" %>
-      </p>
+      <br>      
+      <div class="col-md-9">
+      <%= submit_tag "Delete Selected", :class => "btn btn-default"%>
+      
     <% end %>
   <% else %>
-    <p>
-    You do not have any <%= @direction == :in ? "" : "sent" %> private
+      You do not have any <%= @direction == :in ? "" : "sent" %> private
       messages.
-    </p>
+    
   <% end %>
-
-  <br>
-
-  <div class="legend">
+</div>
+  <br><br><br><br>
+<div class="col-md-9 border">
+  <h3>
     Compose Message
-  </div>
-
-  <%= form_for @new_message, :method => :post do |f| %>
+  </h3>
+</div>
+  <div class="form">
+    <div class="from-group">
+<br>
+    <%= form_for @new_message, :method => :post do |f| %>
     <%= error_messages_for @new_message %>
-
-    <div class="boxline">
+    <div class="row">
+    <div class="col-md-9">
       <%= f.label :recipient_username, "To:", :class => "required" %>
       <%= f.text_field :recipient_username, :size => 20,
-        :autocomplete => "off" %>
+        :autocomplete => "off", :class => "form-control", :placeholder => "Enter UpTrade username" %>
+      </div>
     </div>
-
-    <div class="boxline">
+    <div class="row">
+    <div class="col-md-9">
       <%= f.label :subject, "Subject:", :class => "required" %>
-      <%= f.text_field :subject, :style => "width: 500px;",
-        :autocomplete => "off" %>
+      <%= f.text_field :subject, :style => "width: 100%;",
+        :autocomplete => "off", :class => "form-control" %>
     </div>
-
-    <div class="boxline">
+  </div>
+    
+    <div class="row">
+    <div class="col-md-9">
       <%= f.label :body, "Message:", :class => "required" %>
-      <%= f.text_area :body, :style => "width: 500px;", :rows => 5,
-        :autocomplete => "off" %>
+      <%= f.text_area :body, :style => "width: 100%;", :rows => 5,
+        :autocomplete => "off", :class => "form-control" %>
     </div>
+  </div>
 
     <div class="boxline">
       <p></p>
-      <%= submit_tag "Send Message" %>
+      <%= submit_tag "Send Message", :class => "btn btn-default" %>
     </div>
   <% end %>
+</div>
+</div>
 </div>
