--- a/app/assets/stylesheets/listdetail.css
+++ b/app/assets/stylesheets/listdetail.css
@@ -1,8 +1,8 @@
 /* Company Colours */ 
-$darkgrey='#252626'
-$sitegreen='#5e938b'
-$backgroundgrey='e0e1e2'
-$textgrey='343434'
+$darkgrey='#7f8c8d'
+$sitegreen='#27ae60'
+$backgroundgrey='ecf0f1'
+$textgrey='000000'
 
 body{
   font-family: MuseoSans,serif;
@@ -32,6 +32,7 @@ body{
   background-color: #7cda94;
   width: 15px;
   padding: 3px 0px;
+  padding:5px 5px;
 }
 
 .dvote {
@@ -40,28 +41,29 @@ body{
   background-color: #d7552d;
   width: 15px;
   padding: 3px 0px;
+  padding:5px 5px;
 }
 
 .up {
-  background-color: #d3d4d5;
+  background-color: #27ae60;
 }
 
 .up:hover {
-  background: #ffffff;
+  background: #373737;
   text-decoration: none;
     -webkit-transition:width .25s, height .25s, background-color .25s, -webkit-transform .25s;
     transition:width .25s, height .25s, background-color .25s, transform .25s;
 }
 
 .down:hover {
-  background: #ffffff;
+  background: #373737;
   text-decoration: none;
     -webkit-transition:width .25s, height .25s, background-color .25s, -webkit-transform .25s;
     transition:width .25s, height .25s, background-color .25s, transform .25s;
 }
 
 .down {
-  background-color: #d3d4d5;
+  background-color: #c0392b;
 }
 
 .tagbutton:hover{
@@ -145,6 +147,8 @@ a:focus {
 }
 
 
+.navbar-default .navbar-nav > li > a:hover
+
 #title:hover {
   color: #67b15e;
 }
@@ -154,7 +158,7 @@ a:focus {
 }
 
 body{
-  background-color: #e1e2e3;
+  background-color: $backgroundgrey;
 }
 
 h4 {
@@ -186,7 +190,7 @@ h6 {
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
   
-  border-bottom: 6px solid #67b15e;
+  border-bottom: 6px solid #ffffff;
 }
 
 .arrow-down {
@@ -195,7 +199,7 @@ h6 {
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
   
-  border-top: 6px solid #c0552d;
+  border-top: 6px solid #ffffff;
 }
 
 html {
