--- a/app/views/invitation_mailer/invitation.text.erb
+++ b/app/views/invitation_mailer/invitation.text.erb
@@ -1,6 +1,8 @@
 Hello <%= @invitation.email %>,
 
-The user <%= @invitation.user.username %> has invited you to <%= Rails.application.name %> (<%= root_url %>)<%= @invitation.memo.present? ? raw("\n\n   #{@invitation.memo}") : "" %>
+The user <%= @invitation.user.username %> has invited you to <%= Rails.application.name %> (<%= root_url %>)
+-->
+<%= @invitation.memo.present? ? raw("   #{@invitation.memo}") : "" %>
 
 To accept this invitation and create an account, visit the URL below:
 
