--- a/app/views/users/_invitationform.html.erb
+++ b/app/views/users/_invitationform.html.erb
@@ -23,10 +23,13 @@ don't personally know.
 
 <div class="form-group">
   <div class="col-sm-2">
-    <%= label_tag :memo, "Memo to User:", :class => "required" %>
+    <%= label_tag :memo, "Message to User:", :class => "required" %>
   </div>
+
+
   <div class="col-sm-7">
-    <%= text_field_tag :memo, "", :size => 60, :class => "form-control" %>
+    <%= text_area_tag :memo, "", :rows => "5", :size => "100x5", :class => "form-control", :style => "width: 100%;" %>
+
   </div>
 </div> 
     <%= submit_tag "Send Invitation", :class => "btn btn-default" %>
