added beta action and view

--- a/app/assets/stylesheets/listdetail.css
+++ b/app/assets/stylesheets/listdetail.css
@@ -8,6 +8,12 @@ body{
   font-family: MuseoSans,serif;
 }
 
+.number {
+  font-size: xxx-large;
+  margin-left: -20px;
+  margin-top: -3px;
+  padding-left: 30px;
+}
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
