--- a/app/views/stories/_listdetail.html.erb
+++ b/app/views/stories/_listdetail.html.erb
@@ -34,7 +34,12 @@ class="story <%= story.vote == 1 ? "upvoted" : "" %> <%= story.vote == -1 ?
           "original submitter" %>]
       <% end %>
       </h4>
+
       <h6>
+      <div class="col-xs-1 number", style="font-size: xx-large;">
+        100
+      </div>
+      <div class="col-xs-7"
       <% if story.previewing %>
         by <a><%= story.user.username %></a>
         just now
@@ -101,6 +106,7 @@ class="story <%= story.vote == 1 ? "upvoted" : "" %> <%= story.vote == -1 ?
           <% end %>
         <% end %>
       <% end %>
+    </div>
       </h6>
     </div>
 
